# xref-old

./: .config.json  .gitignore  .htaccess  CMakeLists.txt  INSTALL  Local.pm  compare-dir-trees.pl  diff  find  genxref  ident  ident.cgi  index.cgi  index.html  index.php  lxr.conf  mozilla-b2g28_v1_3t  mozilla-b2g37_v2_2  mozilla-esr45  script.js  search  search-help.html  search.cgi  source  source.cgi  swap_addons_live_stage.sh  template-dir  template-head  template-ident-fileref  template-rev-entry  template-source-head  template-sourcedir-head  template-tail  template-tree  template-tree-entry  update-conf.py  update-full-onetree-tmp.sh  update-full-onetree.sh  update-lxr.sh  update-root-xref.pl  (+8 more)
base/: site.php
lib/: SimpleParse.pm
lib/LXR/: Common.pm  Config.pm  Shell.pm
libs/mxr/: source.cgi  update-search.pl  update-xref.pl
libs/mxr/lib/LXR/: Common.pm  Config.pm
media/scripts/: coloration.js
media/style/: alt1-cgi.css  alt1-cpp.css  alt1-mk.css  alt1-pl.css  alt2-pl.css  alt2-pm.css  cgi.css  h.css  idl.css  pl.css  style.css
media/templates/: template-dir  template-head  template-ident-fileref  template-root-index  template-source-head  template-source-index  template-sourcedir-head  template-sourcedir-tail
obsolete/: add-root.pl  lxr.conf  lxr.conf.new  merge-xref.pl  update-full-onetree-tmp.sh  update-full-onetree.sh
obsolete/tests/: check_jscoloration.js  check_jscoloration_build.sh
obsolete/tests/c/enum/: q.h
obsolete/tests/diff-markup/: README
obsolete/tests/icons/not-readable-dir/: .notes
obsolete/tests/syntax-highlighting/: class.h  continuation.h  defines.c  derived.idl  idl.idl  idl2.idl  include.c  inter.idl  jdoc.java  linecounting.js  mcetool.bak  mcetool.c  mcetool2.c  mixedcomments.cpp  newline.c  pod.cpp  pod.pl  test.c  testInclude.pl
root/: 0  M10  av101  b.html  b.html.orig  index.html  index.html.0.orig  index.html.0.rej  mz10  mz10x  mz14  mz18  mz180
src/: .htaccess  CMakeLists.txt  fileidx  find  genxref  ident  index.cgi  index.html  index.php  lxr.conf  lxrconf.inc  root-index.inc  rootindex.inc  search  source  template-head  template-rev  template-rev-entry  template-source-head  update-search.pl  xref-conf.py.in  xref-shared.inc  xref-update.py
src/icons/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/LXR/: CMakeLists.txt  Common.pm.in  Config.pm  Shell.pm
src/media/: CMakeLists.txt
src/media/icons/: CMakeLists.txt
src/media/scripts/: CMakeLists.txt
src/media/style/: CMakeLists.txt  alt1-c.css.in  alt2-pl.css.in  idl.css.in
src/media/templates/: CMakeLists.txt  template-head  template-source-head  template-source-index  template-source-tail  template-sourcedir-head  template-tail
src/root/: CMakeLists.txt  index.html
src/style/: CMakeLists.txt  alt1-cpp.css  alt1-cpp.css.in  alt1-mk.css.in  alt1-pm.css.in  alt2-pl.css  alt2-pm.css.in  h.css  h.css.in  idl.css  pl.css.in  pm.css  pm.css.in  style.css
src/templates/: template-dir
style/: alt1-c.css  alt1-cgi.css  alt1-cpp.css  alt1-mk.css  alt2-pm.css  h.css  pl.css  style.css
tests/: check_jscoloration.html
tests/icons/: .notes
tests/icons/empty-dir/: .notes
tests/syntax-highlighting/: EULA.js  TestCase.pm  base.h  base.idl  derived.h  derived.idl  idl.idl  idl2.idl  ifdef.h  inter.idl  mcetool.c  mcetool2.c  newline2.c  prop.cpp  prop.idl  static.c  test.cpp  test.js  test.pl  testInclude.pl
tests/syntax-highlighting/export/home/www/html/tests/syntax-highlighting/: prop.cpp  prop.idl
tests/syntax-highlighting/readmes/fontname/: README
tests/syntax-highlighting/readmes/plain/: README
tests/syntax-highlighting/regress/: regress-620256.js
